[www] wsgi: expose the api prefix to the flask app

--- a/www/apache.conf
+++ b/www/apache.conf
@@ -4,7 +4,7 @@
 	ServerAlias tunnel.bio.lmu.de 
 
         WSGIDaemonProcess noisebox user=www-data group=www-data threads=5
-        WSGIScriptAlias /api /usr/share/noisebox/noisebox.wsgi 
+        WSGIScriptAlias /api /usr/share/noisebox/noisebox.wsgi/api
         WSGIScriptReloading On
 
         DocumentRoot /usr/share/noisebox
